--- a/po/de.po
+++ b/po/de.po
@@ -1,4 +1,4 @@
-# Russian translations for com.github.manexim.home package.
+# German translations for com.github.manexim.home package.
 # Copyright (C) 2019 THE com.github.manexim.home'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the com.github.manexim.home package.
 # Automatically generated, 2019.
@@ -8,81 +8,79 @@ msgstr ""
 "Project-Id-Version: com.github.manexim.home\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-06-22 09:48+0200\n"
-"PO-Revision-Date: 2019-06-17 22:56+0400\n"
-"Last-Translator: Andrey Kultyapov <camellan@yandex.ru>\n"
+"PO-Revision-Date: 2019-06-22 09:24+0200\n"
+"Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
-"Language: ru\n"
+"Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
-"X-Generator: Poedit 2.0.6\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: src/MainWindow.vala:65 src/MainWindow.vala:70 src/MainWindow.vala:71
 msgid "Overview"
-msgstr ""
+msgstr "Übersicht"
 
 #: src/views/Overview.vala:33
 msgid "Devices"
-msgstr ""
+msgstr "Geräte"
 
 #: src/views/WelcomeView.vala:26
 msgid "Control your smart home gadgets"
-msgstr "Управляйте своими умными домашними устройствами"
+msgstr "Steuern Sie Ihre Smart Home Gadgets"
 
 #: src/views/WelcomeView.vala:30
 msgid ""
 "Smart Wi-Fi lights by LIFX are supported. They must already be connected to "
 "your Wi-Fi."
 msgstr ""
-"Поддерживаются умные Wi-Fi лампы LIFX . Они уже должны быть подключены к Wi-"
-"Fi."
+"Intelligente WLAN-Leuchten von LIFX werden unterstützt. Sie müssen bereits "
+"mit Ihrem WLAN verbunden sein."
 
 #: src/views/WelcomeView.vala:35
 msgid ""
 "Smart ZigBee lights by Philips Hue are supported. They must already be "
 "connected to your Philips Hue Bridge."
 msgstr ""
-"Поддерживаются умные ZigBee лампы от Philips Hue. Они уже должны быть "
-"подключены к Philips Hue Bridge."
+"Intelligente ZigBee-Leuchten von Philips Hue werden unterstützt. Sie müssen "
+"bereits an Ihre Philips Hue Bridge angeschlossen sein."
 
 #: src/views/WelcomeView.vala:39
 msgid "Let's go"
-msgstr "Поехали"
+msgstr "Lass uns loslegen"
 
 #: src/views/WelcomeView.vala:40
 msgid ""
 "You can control your smart home gadgets directly via your local network. A "
 "connection to the internet is not required."
 msgstr ""
-"Вы можете управлять своими умными домашними устройствами непосредственно "
-"через локальную сеть. Подключение к интернету не требуется."
+"Sie können Ihre Smart Home Gadgets direkt über Ihr lokales Netzwerk steuern. "
+"Eine Verbindung zum Internet ist nicht erforderlich."
 
 #: src/pages/ThingPage.vala:65
 msgid "ID: "
-msgstr ""
+msgstr "ID: "
 
 #: src/pages/ThingPage.vala:66
 msgid "Manufacturer: "
-msgstr ""
+msgstr "Hersteller: "
 
 #: src/pages/ThingPage.vala:67
 msgid "Model: "
-msgstr ""
+msgstr "Modell: "
 
 #: src/pages/ThingPage.vala:72
 msgid "Enabled"
-msgstr ""
+msgstr "Aktiviert"
 
 #: src/pages/ThingPage.vala:76
 msgid "Disabled"
-msgstr ""
+msgstr "Deaktiviert"
 
 #: src/pages/ThingPage.vala:80
 msgid "Unknown"
-msgstr ""
+msgstr "Unbekannt"
 
 #: src/pages/LoadingPage.vala:27
 msgid "Looking for smart home gadgets to control."
-msgstr "Поиск умных домашних устройств."
+msgstr "Suche nach Smart Home Gadgets zur Steuerung."
