--- a/po/extra/de.po
+++ b/po/extra/de.po
@@ -1,4 +1,4 @@
-# Russian translations for extra package.
+# German translations for extra package.
 # Copyright (C) 2019 THE extra'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the extra package.
 # Automatically generated, 2019.
@@ -8,88 +8,86 @@ msgstr ""
 "Project-Id-Version: extra\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-06-22 09:47+0200\n"
-"PO-Revision-Date: 2019-06-17 22:54+0400\n"
-"Last-Translator: Andrey Kultyapov <camellan@yandex.ru>\n"
+"PO-Revision-Date: 2019-06-22 09:24+0200\n"
+"Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
-"Language: ru\n"
+"Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
-"X-Generator: Poedit 2.0.6\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #: data/com.github.manexim.home.appdata.xml.in:7
 #: data/com.github.manexim.home.desktop.in:4
 #: data/com.github.manexim.home.desktop.in:5
 msgid "Home"
-msgstr "Home"
+msgstr ""
 
 #: data/com.github.manexim.home.appdata.xml.in:8
 #: data/com.github.manexim.home.desktop.in:6
 msgid "Control your smart home gadgets"
-msgstr "Управляйте своими умными домашними устройствами"
+msgstr "Steuern Sie Ihre Smart Home Gadgets"
 
 #: data/com.github.manexim.home.appdata.xml.in:10
 msgid "A smart home application to control your gadgets."
-msgstr "Приложение для управления вашими умными устройствами."
+msgstr "Eine Smart Home App zur Steuerung Ihrer Gadgets."
 
 #: data/com.github.manexim.home.appdata.xml.in:11
 msgid "Supported devices:"
-msgstr "Поддерживаемые устройства:"
+msgstr "Unterstützte Geräte:"
 
 #: data/com.github.manexim.home.appdata.xml.in:13
 msgid "LIFX"
-msgstr "LIFX"
+msgstr ""
 
 #: data/com.github.manexim.home.appdata.xml.in:25
 msgid "New:"
-msgstr "Новое:"
+msgstr "Neu:"
 
 #: data/com.github.manexim.home.appdata.xml.in:27
 msgid "Add welcome view for onboarding"
-msgstr "Add welcome view for onboarding"
+msgstr "Willkommensansicht für Onboarding hinzugefügt"
 
 #: data/com.github.manexim.home.appdata.xml.in:28
 msgid "Show loading page if no smart home gadget is found"
-msgstr "Show loading page if no smart home gadget is found"
+msgstr "Lade-Seite anzeigen, wenn kein Smart Home Gadget gefunden wird."
 
 #: data/com.github.manexim.home.appdata.xml.in:29
 msgid "Show manufacturer and model of device"
-msgstr "Show manufacturer and model of device"
+msgstr "Zeige Hersteller und Modell des Gerätes an"
 
 #: data/com.github.manexim.home.appdata.xml.in:31
 msgid "Improved:"
-msgstr "Улучшено:"
+msgstr "Verbessert:"
 
 #: data/com.github.manexim.home.appdata.xml.in:33
 msgid "Save and load window settings"
-msgstr "Save and load window settings"
+msgstr "Speichern und laden der Fenstereinstellungen"
 
 #: data/com.github.manexim.home.appdata.xml.in:35
 msgid "Fixed:"
-msgstr "Исправлено:"
+msgstr ""
 
 #: data/com.github.manexim.home.appdata.xml.in:37
 msgid "Remove mention of elementary OS in app description"
-msgstr "Remove mention of elementary OS in app description"
+msgstr "Entfernen der Erwähnung von elementary OS in der App-Beschreibung"
 
 #: data/com.github.manexim.home.appdata.xml.in:38
 msgid "Suffix symbolic icon names with -symbolic"
-msgstr "Suffix symbolic icon names with -symbolic"
+msgstr "-symbolic an symbolic Icon-Namen angehängt"
 
 #: data/com.github.manexim.home.appdata.xml.in:39
 msgid "Install all available icon sizes"
-msgstr "Install all available icon sizes"
+msgstr "Installiere alle verfügbaren Icon-Größen"
 
 #: data/com.github.manexim.home.appdata.xml.in:45
 msgid "Initial release"
-msgstr "Initial release"
+msgstr "Erstveröffentlichung"
 
 #: data/com.github.manexim.home.appdata.xml.in:71
 msgid "Manexim"
-msgstr "Manexim"
+msgstr ""
 
 #: data/com.github.manexim.home.desktop.in:8
 msgid "com.github.manexim.home"
-msgstr "com.github.manexim.home"
+msgstr ""
