Update explanation to configure Philips Hue Bridge

--- a/po/de.po
+++ b/po/de.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: com.github.manexim.home\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-06-22 19:07+0200\n"
+"POT-Creation-Date: 2019-06-22 19:15+0200\n"
 "PO-Revision-Date: 2019-06-22 09:24+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -62,8 +62,8 @@ msgid ""
 "You can control your smart home gadgets directly via your local network. A "
 "connection to the internet is not required."
 msgstr ""
-"Du kannst deine Smart Home Gadgets direkt über dein lokales Netzwerk steuern. "
-"Eine Verbindung zum Internet ist nicht erforderlich."
+"Du kannst deine Smart Home Gadgets direkt über dein lokales Netzwerk "
+"steuern. Eine Verbindung zum Internet ist nicht erforderlich."
 
 #: src/pages/ThingPage.vala:65
 msgid "ID: "
@@ -94,5 +94,5 @@ msgid "Looking for smart home gadgets to control."
 msgstr "Suche nach steuerbaren Smart Home Gadgets."
 
 #: src/pages/HueBridgeOnboardingPage.vala:31
-msgid "Press the push-link button on the Hue bridge."
-msgstr "Drücke die Push-Link-Taste an der Hue Bridge."
+msgid "Press the push-link button in the middle of the Hue bridge."
+msgstr "Drücke die Push-Link-Taste in der Mitte der Hue Bridge."
