--- a/po/com.github.manexim.home.pot
+++ b/po/com.github.manexim.home.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: com.github.manexim.home\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-06-22 19:07+0200\n"
+"POT-Creation-Date: 2019-06-22 19:15+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -88,5 +88,5 @@ msgid "Looking for smart home gadgets to control."
 msgstr ""
 
 #: src/pages/HueBridgeOnboardingPage.vala:31
-msgid "Press the push-link button on the Hue bridge."
+msgid "Press the push-link button in the middle of the Hue bridge."
 msgstr ""
