--- a/po/fr.po
+++ b/po/fr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: com.github.manexim.home\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-06-22 19:07+0200\n"
+"POT-Creation-Date: 2019-06-22 19:15+0200\n"
 "PO-Revision-Date: 2019-06-17 22:32+0400\n"
 "Last-Translator: NathanBnm\n"
 "Language-Team: none\n"
@@ -94,5 +94,5 @@ msgid "Looking for smart home gadgets to control."
 msgstr "Recherche d'objets connectés à contrôler."
 
 #: src/pages/HueBridgeOnboardingPage.vala:31
-msgid "Press the push-link button on the Hue bridge."
+msgid "Press the push-link button in the middle of the Hue bridge."
 msgstr ""
