--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,32 @@
+com.github.manexim.home (0.3.0) bionic; urgency=medium
+
+[NEW]
+ * Add welcome view for onboarding
+ * Show loading page if no smart home gadget is found
+ * Show manufacturer and model of device
+[IMPROVED]
+ * Save and load window settings
+[FIXED]
+ * Remove mention of elementary OS in app description
+ * Suffix symbolic icon names with -symbolic
+ * Install all available icon sizes
+[NEW]
+ * Add new UI
+ * Add initial support for Philips Hue devices
+ * Add discovery for Philips Hue bridges
+ * Add page to configure Philips Hue bridges
+ * Add service to save configurations
+[IMPROVED]
+ * Update welcome view
+ * Add mode switch for dark theme if freedesktop schema is not available
+[FIXED]
+[TRANSLATIONS]
+ * French (by NathanBnm)
+ * German
+ * Russian (by camellan)
+
+ -- Marius Meisenzahl <mariusmeisenzahl@gmail.com>  Thu, 14 Jul 2019 19:40:29 +0200
+
 com.github.manexim.home (0.2.0) bionic; urgency=medium
 
 [NEW]
