--- a/po/extra/pt.po
+++ b/po/extra/pt.po
@@ -9,11 +9,11 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-07-11 19:55+0200\n"
 "PO-Revision-Date: 2019-07-11 19:55+0200\n"
-"Last-Translator: Automatically generated\n"
+"Last-Translator: aimproxy\n"
 "Language-Team: none\n"
 "Language: pt\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ASCII\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
@@ -21,20 +21,20 @@ msgstr ""
 #: data/com.github.manexim.home.desktop.in:4
 #: data/com.github.manexim.home.desktop.in:5
 msgid "Home"
-msgstr ""
+msgstr "Casa"
 
 #: data/com.github.manexim.home.appdata.xml.in:8
 #: data/com.github.manexim.home.desktop.in:6
 msgid "Control your smart home gadgets"
-msgstr ""
+msgstr "Controle seus gadgets domésticos inteligentes"
 
 #: data/com.github.manexim.home.appdata.xml.in:10
 msgid "A smart home application to control your gadgets."
-msgstr ""
+msgstr "Uma aplicação para casas inteligentes para controlar seus gadgets."
 
 #: data/com.github.manexim.home.appdata.xml.in:11
 msgid "Supported devices:"
-msgstr ""
+msgstr "Dispositivos suportados:"
 
 #: data/com.github.manexim.home.appdata.xml.in:13
 msgid "LIFX"
@@ -47,93 +47,94 @@ msgstr ""
 #: data/com.github.manexim.home.appdata.xml.in:26
 #: data/com.github.manexim.home.appdata.xml.in:52
 msgid "New:"
-msgstr ""
+msgstr "Novo: "
 
 #: data/com.github.manexim.home.appdata.xml.in:28
 msgid "Add new UI"
-msgstr ""
+msgstr "Adicionar nova interface do usuário"
 
 #: data/com.github.manexim.home.appdata.xml.in:29
 msgid "Add initial support for Philips Hue devices"
-msgstr ""
+msgstr "Adicionar suporte inicial para dispositivos Philips Hue"
 
 #: data/com.github.manexim.home.appdata.xml.in:30
 msgid "Add discovery for Philips Hue bridges"
-msgstr ""
+msgstr "Adicionar descoberta para pontes Philips Hue"
 
 #: data/com.github.manexim.home.appdata.xml.in:31
 msgid "Add page to configure Philips Hue bridges"
-msgstr ""
+msgstr "Adicionar página para configurar pontes Philips Hue"
 
 #: data/com.github.manexim.home.appdata.xml.in:32
 msgid "Add service to save configurations"
-msgstr ""
+msgstr "Adicionar serviço para guardar configurações"
 
 #: data/com.github.manexim.home.appdata.xml.in:34
 #: data/com.github.manexim.home.appdata.xml.in:58
 msgid "Improved:"
-msgstr ""
+msgstr "Melhorado:"
 
 #: data/com.github.manexim.home.appdata.xml.in:36
 msgid "Update welcome view"
-msgstr ""
+msgstr "Atualizar painel de boas-vindas"
 
 #: data/com.github.manexim.home.appdata.xml.in:37
 msgid "Add mode switch for dark theme if freedesktop schema is not available"
-msgstr ""
+msgstr "Adicionar alternar modo para tema escuro se o esquema freedesktop não estiver disponível"
 
 #: data/com.github.manexim.home.appdata.xml.in:39
 #: data/com.github.manexim.home.appdata.xml.in:62
 msgid "Fixed:"
-msgstr ""
+msgstr "Corrigido:"
 
 #: data/com.github.manexim.home.appdata.xml.in:42
 msgid "Translations:"
-msgstr ""
+msgstr "Traduções:"
 
 #: data/com.github.manexim.home.appdata.xml.in:44
 msgid "French (by NathanBnm)"
-msgstr ""
+msgstr "Francês (pelo NathanBnm)"
 
 #: data/com.github.manexim.home.appdata.xml.in:45
 msgid "German"
-msgstr ""
+msgstr "Alemão"
 
 #: data/com.github.manexim.home.appdata.xml.in:46
 msgid "Russian (by camellan)"
-msgstr ""
+msgstr "Russo (pelo camellan)"
 
 #: data/com.github.manexim.home.appdata.xml.in:54
 msgid "Add welcome view for onboarding"
-msgstr ""
+msgstr "Adicione uma vista de boas vindas ao onboarding"
 
 #: data/com.github.manexim.home.appdata.xml.in:55
 msgid "Show loading page if no smart home gadget is found"
-msgstr ""
+msgstr "Mostrar página de carregamento se não for encontrado "
+"nenhum dispositivo doméstico inteligente"
 
 #: data/com.github.manexim.home.appdata.xml.in:56
 msgid "Show manufacturer and model of device"
-msgstr ""
+msgstr "Mostrar fabricante e modelo do dispositivo"
 
 #: data/com.github.manexim.home.appdata.xml.in:60
 msgid "Save and load window settings"
-msgstr ""
+msgstr "Guardar e carregar as configurações da janela"
 
 #: data/com.github.manexim.home.appdata.xml.in:64
 msgid "Remove mention of elementary OS in app description"
-msgstr ""
+msgstr "Remover menção de elementaryOS na descrição do aplicativo"
 
 #: data/com.github.manexim.home.appdata.xml.in:65
 msgid "Suffix symbolic icon names with -symbolic"
-msgstr ""
+msgstr "Sufixo nomes de ícones simbólicos com -symbolic"
 
 #: data/com.github.manexim.home.appdata.xml.in:66
 msgid "Install all available icon sizes"
-msgstr ""
+msgstr "Instalar todos os tamanhos de ícones disponíveis"
 
 #: data/com.github.manexim.home.appdata.xml.in:72
 msgid "Initial release"
-msgstr ""
+msgstr "Lançamento inicial"
 
 #: data/com.github.manexim.home.appdata.xml.in:102
 msgid "Manexim"
