--- a/po/pt.po
+++ b/po/pt.po
@@ -8,22 +8,23 @@ msgstr ""
 "Project-Id-Version: com.github.manexim.home\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-07-15 12:36+0200\n"
-"PO-Revision-Date: 2019-07-15 12:36+0200\n"
-"Last-Translator: aimproxy\n"
+"PO-Revision-Date: 2020-08-26 13:57+0100\n"
+"Last-Translator: André Barata <andretiagob@protonmail.com>\n"
 "Language-Team: none\n"
 "Language: pt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 2.4.1\n"
 
 #: src/MainWindow.vala:58
 msgid "Light background"
-msgstr "Fundo Branco"
+msgstr "Tema Claro"
 
 #: src/MainWindow.vala:59
 msgid "Dark background"
-msgstr "Fundo Preto"
+msgstr "Tema Escuro"
 
 #: src/MainWindow.vala:80 src/MainWindow.vala:85 src/MainWindow.vala:86
 msgid "Overview"
@@ -34,8 +35,8 @@ msgid ""
 "You can control your smart home gadgets directly via your local network. A "
 "connection to the internet is not required."
 msgstr ""
-"Você pode controlar seus gadgets domésticos inteligentes diretamente pela "
-"rede local. Uma conexão com a internet não é necessária."
+"Pode controlar diretamente os seus aparelhos domésticos inteligentes a partir "
+"da sua rede local. Não é necessária uma ligação à Internet."
 
 #: src/onboarding/FinishView.vala:27
 msgid "Let's go"
@@ -46,20 +47,20 @@ msgid ""
 "Smart Wi-Fi lights by LIFX are supported. They must already be connected to "
 "your Wi-Fi."
 msgstr ""
-"As luzes Smart Wi-Fi da LIFX são suportadas. Eles já devem estar conectados a "
-"a rua rede Wi-Fi"
+"Suporte para luzes inteligentes Wi-Fi pela LIFX. Elas já têm que estar "
+"conectadas à sua rede via Wi-FI."
 
 #: src/onboarding/PhilipsHueView.vala:25
 msgid ""
 "Smart ZigBee lights by Philips Hue are supported. They must already be "
 "connected to your Philips Hue Bridge."
 msgstr ""
-"As luzes Smart ZigBee da Philips Hue são suportadas. Eles já devem estar "
-"conectadas ao seu Philips Hue Bridge."
+"Suporte para luzes inteligentes ZigBee pela Philips Hue. Elas já têm que "
+"estar conectadas à ponte do Philips Hue."
 
 #: src/onboarding/StartView.vala:25
 msgid "Control your smart home gadgets"
-msgstr "Controle seus gadgets domésticos inteligentes"
+msgstr "Controle os seus aparelhos domésticos inteligentes"
 
 #: src/onboarding/StartView.vala:27
 #, c-format
@@ -68,7 +69,7 @@ msgstr "Bem-vindo a %s!"
 
 #: src/pages/DevicePage.vala:43
 msgid "Hue: "
-msgstr "Matiz: "
+msgstr "Tonalidade:"
 
 #: src/pages/DevicePage.vala:63
 msgid "Saturation: "
@@ -80,11 +81,11 @@ msgstr "Brilho: "
 
 #: src/pages/DevicePage.vala:107
 msgid "Color temperature: "
-msgstr "Temperatura de cor: "
+msgstr "Temperatura da cor: "
 
 #: src/pages/DevicePage.vala:156
 msgid "ID: "
-msgstr "ID"
+msgstr "ID:"
 
 #: src/pages/DevicePage.vala:157
 msgid "Manufacturer: "
@@ -108,15 +109,15 @@ msgstr "Desconhecido"
 
 #: src/pages/LoadingPage.vala:27
 msgid "Looking for smart home gadgets to control."
-msgstr "Procurando por gadgets domésticos inteligentes para controlar."
+msgstr "A procurar por aparelhos domésticos inteligentes para controlar."
 
 #: src/pages/HueBridgeOnboardingPage.vala:38
 msgid "Press the push-link button in the middle of the Hue bridge."
-msgstr "Pressione o botão de link no meio do Hue bridge."
+msgstr "Pressione o botão de ligação no meio da ponte do Hue."
 
 #: src/pages/HueBridgeOnboardingPage.vala:59
 msgid "The Hue bridge was successfully registered."
-msgstr "O Hue bridge foi registrado com sucesso."
+msgstr "A ponte do Hue foi registada com sucesso."
 
 #: src/views/Overview.vala:30
 msgid "Devices"
@@ -124,11 +125,11 @@ msgstr "Dispositivos"
 
 #: src/views/Overview.vala:65
 msgid "Hubs"
-msgstr ""
+msgstr "Hubs (Concentradores)"
 
 #: src/views/OnboardingView.vala:53
 msgid "Skip All"
-msgstr "Pular Tudo"
+msgstr "Saltar Todos"
 
 #: src/views/OnboardingView.vala:64 src/views/OnboardingView.vala:91
 msgid "Next"
