--- a/po/es.po
+++ b/po/es.po
@@ -1,10 +1,10 @@
-# Spanish translations for com.github.manexim.home package.
-# Copyright (C) 2019 THE com.github.manexim.home'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the com.github.manexim.home package.
+# Spanish translations for com.manexim.home package.
+# Copyright (C) 2019 THE com.manexim.home'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the com.manexim.home package.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: com.github.manexim.home\n"
+"Project-Id-Version: com.manexim.home\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-07-11 19:55+0200\n\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
