--- a/po/nl.po
+++ b/po/nl.po
@@ -1,11 +1,11 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the com.github.manexim.home package.
+# This file is distributed under the same license as the com.manexim.home package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: com.github.manexim.home\n"
+"Project-Id-Version: com.manexim.home\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-07-11 19:55+0200\n"
 "PO-Revision-Date: 2019-11-04 14:15+0100\n"
